test/fail/Negative1.agda
module Negative1 where

data D : Set where
    lam : (D -> D) -> D

